--- a/New folder (2)/index.html
+++ b/New folder (2)/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="author" content="Devcrud" />
-    <title>V FIT</title>
+    <title>StudentEduTour</title>
     <!-- font icons -->
     <link rel="stylesheet" href="assets/css/home.css" />
 </head>
