--- a/New folder (2)/XII_homepage_Sci.html
+++ b/New folder (2)/XII_homepage_Sci.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
-  <link rel="stylesheet" href="assets/css/style_XII_Sci_home.css">
+  <link rel="stylesheet" href="assets/css/style_XII_home.css">
   <title>XII_Science Study Material</title>
 </head>
 
@@ -55,7 +55,7 @@
 <!-- account form section ends -->
 <!-- header section ends -->
 <section class="heading-link">
-    <h3>XII_Science</h3>
+    <h3>XII Science</h3>
     <!-- <p> <a href="home.html">home</a> / class 10th </p> -->
 </section>
 <section class="courses">
@@ -77,7 +77,7 @@
         </div>
         <div class="box">
             <div class="image">
-                <img src="assets/imgs/CHEMISTRY.jpg" alt="">
+                <img src="assets/imgs/chemistry course bg.jpg" alt="">
                 <h3>CHEMISTRY</h3>
             </div>
             <div class="content">
@@ -92,7 +92,7 @@
         </div>
         <div class="box">
             <div class="image">
-                <img src="assets/imgs/BIOLOGY.jpeg" alt="">
+                <img src="assets/imgs/biology course bg.jpg" alt="">
                 <h3>BIOLOGY</h3>
             </div>
             <div class="content">
@@ -107,7 +107,7 @@
         </div>
         <div class="box">
             <div class="image">
-                <img src="assets/imgs/PHYSICS.jpg" alt="">
+                <img src="assets/imgs/physics course bg.jpg" alt="">
                 <h3>PHYSICS</h3>
             </div>
             <div class="content">
