11th and 12th Commerce pages done

--- a/New folder (2)/XII_homepage_Comm.html
+++ b/New folder (2)/XII_homepage_Comm.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
   <link rel="stylesheet" href="assets/css/style_XII_home.css">
-  <title>XII_Commerce Study Material</title>
+  <title>XII Commerce Study Material</title>
 </head>
 
 <body>
@@ -68,7 +68,6 @@
             </div>
             <div class="content">
                 <h3>LIFE IS LIKE ACCOUNTANCY, EVERYTHING MUST BE BALANCED.</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque, odit!</p>
                 <a href="#" class="btn">read more</a>
                 <div class="icons">
                     <span> <i class="fas fa-book"></i> 12 modules </span>
@@ -78,12 +77,11 @@
         </div>
         <div class="box">
             <div class="image">
-                <img src="assets/imgs/biology course bg.jpg" alt="">
+                <img src="assets/imgs/Business Studies course bg.png" alt="">
                 <h3>Business Studies</h3>
             </div>
             <div class="content">
-                <h3>Biology is the study of life's interactions.</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque, odit!</p>
+                <h3>It is a field of study that deals with the principles of business, management, and economics</h3>
                 <a href="#" class="btn">read more</a>
                 <div class="icons">
                     <span> <i class="fas fa-book"></i> 12 modules </span>
@@ -93,12 +91,11 @@
         </div>
         <div class="box">
             <div class="image">
-                <img src="assets/imgs/physics course bg.jpg" alt="">
+                <img src="assets/imgs/ECONOMICS.jpeg" alt="">
                 <h3>Economics</h3>
             </div>
             <div class="content">
-                <h3>Live your life according to Physics.</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque, odit!</p>
+                <h3>The hardest thing in the world to understand is the income tax.</h3>
                 <a href="#" class="btn">read more</a>
                 <div class="icons">
                     <span> <i class="fas fa-book"></i> 12 modules </span>
@@ -113,7 +110,6 @@
             </div>
             <div class="content">
                 <h3>PURE MATHEMATICS IS, IN ITS WAY, THE POETRY OF LOGICAL IDEAS</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque, odit!</p>
                 <a href="#" class="btn">read more</a>
                 <div class="icons">
                     <span> <i class="fas fa-book"></i> 12 modules </span>
@@ -128,7 +124,6 @@
             </div>
             <div class="content">
                 <h3>To inspire, get the English language.</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque, odit!</p>
                 <a href="#" class="btn">read more</a>
                 <div class="icons">
                     <span> <i class="fas fa-book"></i> 12 modules </span>
