--- a/New folder (2)/XI_homepage_Comm.html
+++ b/New folder (2)/XI_homepage_Comm.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
   <link rel="stylesheet" href="assets/css/style_XI_home.css">
-  <title>XI Science Study Material</title>
+  <title>XI Commerce Study Material</title>
 </head>
 
 <body>
@@ -16,7 +16,7 @@
     <a href="index.html" class="logo"> <i class="fas fa-lightbulb"></i> StudentEduTour </a>
     <nav class="navbar">
         <div id="close-navbar" class="fas fa-times"></div>
-        <a href="XII_homepage_Sci.html">Home</a>
+        <a href="XI_homepage_Comm.html">Home</a>
         <a href="#">About Us</a>
         <a href="DoubtsPage.html">Ask Doubt</a>
         <a href="#footer_0">Contact Us</a>
@@ -53,11 +53,12 @@
     </form>
 </div>
 <!-- account form section ends -->
+
 <!-- header section ends -->
-<section class="heading-link">
-    <h3>XI Science</h3>
-    <!-- <p> <a href="home.html">home</a> / class 10th </p> -->
+<section class="heading-link" id="heading-link-XI-Commerce">
+    <h3>XI Commerce</h3>
 </section>
+
 <section class="courses">
     <div class="box-container">
         <div class="box">
@@ -66,8 +67,7 @@
                 <h3>MATHEMATICS</h3>
             </div>
             <div class="content">
-                <h3>MATHEMATICS IS THE KEY & DOOR TO SCIENCE</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque, odit!</p>
+                <h3>PURE MATHEMATICS IS, IN ITS WAY, THE POETRY OF LOGICAL IDEAS</h3>
                 <a href="#" class="btn">read more</a>
                 <div class="icons">
                     <span> <i class="fas fa-book"></i> 12 modules </span>
@@ -77,42 +77,11 @@
         </div>
         <div class="box">
             <div class="image">
-                <img src="assets/imgs/chemistry course bg.jpg" alt="">
-                <h3>CHEMISTRY</h3>
+                <img src="assets/imgs/ECONOMICS.jpeg" alt="">
+                <h3>Economics</h3>
             </div>
             <div class="content">
-                <h3>Think like a Proton and stay positive!</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque, odit!</p>
-                <a href="#" class="btn">read more</a>
-                <div class="icons">
-                    <span> <i class="fas fa-book"></i> 12 modules </span>
-                    <span> <i class="fas fa-clock"></i> 6 hours </span>
-                </div>
-            </div>
-        </div>
-        <div class="box">
-            <div class="image">
-                <img src="assets/imgs/biology course bg.jpg" alt="">
-                <h3>BIOLOGY</h3>
-            </div>
-            <div class="content">
-                <h3>Biology is the study of life's interactions.</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque, odit!</p>
-                <a href="#" class="btn">read more</a>
-                <div class="icons">
-                    <span> <i class="fas fa-book"></i> 12 modules </span>
-                    <span> <i class="fas fa-clock"></i> 6 hours </span>
-                </div>
-            </div>
-        </div>
-        <div class="box">
-            <div class="image">
-                <img src="assets/imgs/physics course bg.jpg" alt="">
-                <h3>PHYSICS</h3>
-            </div>
-            <div class="content">
-                <h3>Live your life according to Physics.</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque, odit!</p>
+                <h3>The hardest thing in the world to understand is the income tax.</h3>
                 <a href="#" class="btn">read more</a>
                 <div class="icons">
                     <span> <i class="fas fa-book"></i> 12 modules </span>
@@ -127,7 +96,6 @@
             </div>
             <div class="content">
                 <h3>To inspire, get the English language.</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque, odit!</p>
                 <a href="#" class="btn">read more</a>
                 <div class="icons">
                     <span> <i class="fas fa-book"></i> 12 modules </span>
@@ -135,21 +103,49 @@
                 </div>
             </div>
         </div>
-</section>
-<!-- footer section starts  -->
-<section class="footer" id="footer_0">
-    <div class="box-container">
         <div class="box">
-            <h3> <i class="fas fa-lightbulb"></i> StudentEduTour </h3>
-            <p>Check out our Social Media Handles.</p>
-            <div class="share">
-                <a href="#" class="fab fa-facebook-f"></a>
-                <a href="#" class="fab fa-twitter"></a>
-                <a href="#" class="fab fa-instagram"></a>
-                <a href="#" class="fab fa-linkedin"></a>
+            <div class="image">
+                <img src="assets/imgs/Business Studies course bg.png" alt="">
+                <h3>Business Studies</h3>
+            </div>
+            <div class="content">
+                <h3>It is a field of study that deals with the principles of business, management, and economics</h3>
+                <a href="#" class="btn">read more</a>
+                <div class="icons">
+                    <span> <i class="fas fa-book"></i> 12 modules </span>
+                    <span> <i class="fas fa-clock"></i> 6 hours </span>
+                </div>
             </div>
         </div>
         <div class="box">
+            <div class="image">
+                <img src="assets/imgs/Accountancy_Course_bg.png" alt="">
+                <h3>Accountancy</h3>
+            </div>
+            <div class="content">
+                <h3>LIFE IS LIKE ACCOUNTANCY, EVERYTHING MUST BE BALANCED.</h3>
+                <a href="#" class="btn">read more</a>
+                <div class="icons">
+                    <span> <i class="fas fa-book"></i> 12 modules </span>
+                    <span> <i class="fas fa-clock"></i> 6 hours </span>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- footer section starts  -->
+    <section class="footer" id="footer_0">
+        <div class="box-container">
+            <div class="box">
+                <h3> <i class="fas fa-lightbulb"></i> StudentEduTour </h3>
+                <p>Check out our Social Media Handles.</p>
+                <div class="share">
+                    <a href="#" class="fab fa-facebook-f"></a>
+                    <a href="#" class="fab fa-twitter"></a>
+                    <a href="#" class="fab fa-instagram"></a>
+                    <a href="#" class="fab fa-linkedin"></a>
+                </div>
+            </div>
+            <div class="box">
             <h3>quick links</h3>
             <a href="home.html" class="link">home</a>
             <a href="about.html" class="link">about</a>
