Improved contact us page
improved its design a bit, and it's javascript so that the FAQ tabs can now be closed as well.

--- a/New folder (2)/contact.html
+++ b/New folder (2)/contact.html
@@ -59,8 +59,7 @@
     <!-- account form section ends -->
     <!-- header section ends -->
     <section class="heading-link">
-        <h3>contact us</h3>
-        <p> <a href="home.html">home</a> / contact </p>
+        <h3>Contact Us</h3>
     </section>
     <!-- contact section starts  -->
     <section class="contact">
@@ -68,38 +67,35 @@
         <div class="icons-container">
             <div class="icons">
                 <i class="fas fa-clock"></i>
-                <h3>opening hours :</h3>
-                <p>00:07am to 00:06pm</p>
+                <h3>Opening hours: </h3>
+                <p>08:00am to 06:00pm</p>
             </div>
             <div class="icons">
                 <i class="fas fa-phone"></i>
-                <h3>phone :</h3>
+                <h3>Phone No:</h3>
                 <p>+123-456-7890</p>
                 <p>+111-222-3333</p>
             </div>
             <div class="icons">
                 <i class="fas fa-envelope"></i>
-                <h3> email : </h3>
-                <p>StudentEdTour@gmail.com</p>
-                <p>help@StudentEdTour.com</p>
+                <h3>Email Id: </h3>
+                <p>StudentEduTour@gmail.com</p>
+                <p>help@StudentEduTour.com</p>
             </div>
             <div class="icons">
                 <i class="fas fa-map"></i>
                 <h3>address :</h3>
-                <p>Sehore, india - 282005</p>
+                <p>Sehore, Madhya Pradesh, India - 466001</p>
             </div>
         </div>
         <div class="row">
-            <div class="image">
-                <img src="images/contact-img.png" alt="">
-            </div>
             <form action="">
-                <h3>send us a message</h3>
-                <input type="text" placeholder="name" class="box">
-                <input type="email" placeholder="email" class="box">
-                <input type="number" placeholder="phone" class="box">
-                <textarea name="" class="box" placeholder="message" id="" cols="30" rows="10"></textarea>
-                <input type="submit" value="send message" class="btn">
+                <h3>Send Us A Message.</h3>
+                <input type="text" placeholder="Name" class="box">
+                <input type="email" placeholder="Email" class="box">
+                <input type="number" placeholder="Phone" class="box">
+                <textarea name="" class="box" placeholder="Your Message" id="" cols="30" rows="10"></textarea>
+                <input type="submit" value="Send Message" class="btn">
             </form>
         </div>
     </section>
@@ -122,9 +118,7 @@
                     <h3>what is the best career in 2023?</h3>
                     <i class="fas fa-angle-down"></i>
                 </div>
-                <p class="accordion-content"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit consequatur
-                    molestias deserunt facere laborum doloremque fuga, quae aut. Recusandae officia quis temporibus!
-                    Magnam mollitia nostrum voluptatibus deserunt quidem. Natus, quo. </p>
+                <p class="accordion-content"> Baba ban ja. </p>
             </div>
             <div class="accordion">
                 <div class="accordion-heading">
