--- a/New folder (2)/contact.html
+++ b/New folder (2)/contact.html
@@ -17,12 +17,13 @@
 <body>
     <!-- header section starts  -->
     <header class="header">
-        <a href="#" class="logo"> <i class="fas fa-lightbulb"></i> StudentEdTour </a>
+        <a href="index.html" class=""> <img src="assets/imgs/logo.png" alt="" width="50px "> </a>
+        <a href="index.html" class="logo">StudentEduTour</a>
         <nav class="navbar">
             <div id="close-navbar" class="fas fa-times"></div>
             <a href="index.html">home</a>
-            <a href="#">about</a>
-            <a href="#">Ask doubt</a>
+            <a href="mentors.html">mentors</a>
+            <a href="DoubtsPage.html">Ask doubt</a>
             <a href="contact.html">contact</a>
         </nav>
         <div class="icons">
@@ -176,27 +177,28 @@
     <section class="footer">
         <div class="box-container">
             <div class="box">
-                <h3> <i class="fas fa-lightbulb"></i> StudentEdTour </h3>
+                <h3> <i class="fas fa-lightbulb"></i> StudentEduTour </h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, voluptatem.</p>
                 <div class="share">
-                    <a href="#" class="fab fa-facebook-f"></a>
-                    <a href="#" class="fab fa-twitter"></a>
-                    <a href="#" class="fab fa-instagram"></a>
-                    <a href="#" class="fab fa-linkedin"></a>
+                    <a href="https://www.facebook.com/aditya.singhal.3133" class="fab fa-facebook-f"></a>
+                    <a href="https://twitter.com/singhaladitya12?t=jFKAQgezQVg2DENSb1ZVhg&s=09"
+                        class="fab fa-twitter"></a>
+                    <a href="https://instagram.com/rohitrana__17?igshid=YmMyMTA2M2Y=" class="fab fa-instagram"></a>
+                    <a href="https://www.linkedin.com/in/rohitrana24" class="fab fa-linkedin"></a>
                 </div>
             </div>
             <div class="box">
                 <h3>quick links</h3>
-                <a href="home.html" class="link">home</a>
-                <a href="about.html" class="link">about</a>
-                <a href="courses.html" class="link">Ask doubt</a>
+                <a href="index.html" class="link">home</a>
+                <a href="mentors.html" class="link">mentors</a>
+                <a href="DoubtsPage.html" class="link">ASK DOUBTS</a>
                 <a href="contact.html" class="link">contact</a>
             </div>
             <div class="box">
                 <h3>useful links</h3>
-                <a href="#" class="link">help center</a>
-                <a href="#" class="link">ask questions</a>
-                <a href="#" class="link">send feedback</a>
+                <a href="contact.html" class="link">help center</a>
+                <a href="DoubtsPage.html" class="link">ask questions</a>
+                <a href="contact.html" class="link">send feedback</a>
                 <a href="#" class="link">private policy</a>
                 <a href="#" class="link">terms of use</a>
             </div>
@@ -209,7 +211,7 @@
                 </form>
             </div>
         </div>
-        <div class="credit"> created by <span>StudentEdTour</span> | all rights reserved! </div>
+        <div class="credit"> created by <span> StudentEduTour</span> | all rights reserved! </div>
     </section>
     <!-- footer section ends -->
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
