--- a/New folder (2)/index.html
+++ b/New folder (2)/index.html
@@ -14,13 +14,13 @@
 <body>
     <!-- header section starts  -->
     <header class="header">
-        <a href="#" class=""> <img src="assets/imgs/logo.png" alt="" width="50px "> </a>
-        <a href="#" class="logo">StudentEduTour</a>
+        <a href="index.html" class=""> <img src="assets/imgs/logo.png" alt="" width="50px "> </a>
+        <a href="index.html" class="logo">StudentEduTour</a>
         <nav class="navbar">
             <div id="close-navbar" class="fas fa-times"></div>
-            <a href="home.html">home</a>
-            <a href="about.html">about</a>
-            <a href="Ask doubt.html">courses</a>
+            <a href="index.html">home</a>
+            <a href="mentors.html">Mentors</a>
+            <a href="DoubtsPage.html">courses</a>
             <a href="contact.html">contact</a>
         </nav>
         <div class="icons">
@@ -72,7 +72,7 @@
                         <h3>the best Mentors you will find find here!</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas impedit labore dolore unde,
                             quidem corrupti?</p>
-                        <a href="#" class="btn">get started</a>
+                        <a href="mentors.html" class="btn">get started</a>
                     </div>
                 </section>
                 <section class="swiper-slide slide" style="background: url(assets/imgs/home-slide-1.jpg) no-repeat;">
@@ -80,7 +80,7 @@
                         <h3>ASK YOUR DOUBTS..ANYTIME!! ANYWHERE!! </h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas impedit labore dolore unde,
                             quidem corrupti?</p>
-                        <a href="#" class="btn">get started</a>
+                        <a href="DoubtsPage.html" class="btn">get started</a>
                     </div>
                 </section>
             </div>
@@ -138,7 +138,7 @@
                     <div class="content">
                         <h3>class 9th</h3>
                         <p></p>
-                        <a href="#" class="btn">read more</a>
+                        <a href="class9.html" class="btn">read more</a>
                     </div>
                 </div>
                 <div class=" slide">
@@ -149,7 +149,7 @@
                     <div class="content">
                         <h3>class 10th</h3>
                         <p></p>
-                        <a href="#" class="btn">read more</a>
+                        <a href="class10.html" class="btn">read more</a>
                     </div>
                 </div>
                 <div class=" slide">
@@ -160,7 +160,7 @@
                     <div class="content">
                         <h3>class 11th</h3>
                         <p></p>
-                        <a href="#" class="btn">read more</a>
+                        <a href="XI_homepage_Sci.html" class="btn">read more</a>
                     </div>
                 </div>
                 <div class=" slide">
@@ -171,7 +171,7 @@
                     <div class="content">
                         <h3>class 12th</h3>
                         <p></p>
-                        <a href="#" class="btn">read more</a>
+                        <a href="XII_homepage_Sci.html" class="btn">read more</a>
                     </div>
                 </div>
             </div>
@@ -185,24 +185,25 @@
                 <h3> <i class="fas fa-lightbulb"></i> StudentEduTour </h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, voluptatem.</p>
                 <div class="share">
-                    <a href="#" class="fab fa-facebook-f"></a>
-                    <a href="#" class="fab fa-twitter"></a>
-                    <a href="#" class="fab fa-instagram"></a>
-                    <a href="#" class="fab fa-linkedin"></a>
+                    <a href="https://www.facebook.com/aditya.singhal.3133" class="fab fa-facebook-f"></a>
+                    <a href="https://twitter.com/singhaladitya12?t=jFKAQgezQVg2DENSb1ZVhg&s=09"
+                        class="fab fa-twitter"></a>
+                    <a href="https://instagram.com/rohitrana__17?igshid=YmMyMTA2M2Y=" class="fab fa-instagram"></a>
+                    <a href="https://www.linkedin.com/in/rohitrana24" class="fab fa-linkedin"></a>
                 </div>
             </div>
             <div class="box">
                 <h3>quick links</h3>
                 <a href="index.html" class="link">home</a>
-                <a href="about.html" class="link">about</a>
-                <a href="#" class="link">ASK DOUBTS</a>
+                <a href="mentors.html" class="link">mentors</a>
+                <a href="DoubtsPage.html" class="link">ASK DOUBTS</a>
                 <a href="contact.html" class="link">contact</a>
             </div>
             <div class="box">
                 <h3>useful links</h3>
-                <a href="#" class="link">help center</a>
-                <a href="#" class="link">ask questions</a>
-                <a href="#" class="link">send feedback</a>
+                <a href="contact.html" class="link">help center</a>
+                <a href="DoubtsPage.html" class="link">ask questions</a>
+                <a href="contact.html" class="link">send feedback</a>
                 <a href="#" class="link">private policy</a>
                 <a href="#" class="link">terms of use</a>
             </div>
