--- a/New folder (2)/class10.html
+++ b/New folder (2)/class10.html
@@ -217,15 +217,15 @@
             </div>
             <div class="box">
                 <h3>quick links</h3>
-                <a href="index.html" class="link">home</a>
-                <a href="mentors.html" class="link">mentors</a>
-                <a href="DoubtsPage.html" class="link">ASK DOUBTS</a>
-                <a href="contact.html" class="link">contact</a>
+                <a href="index.html" class="link">Home</a>
+                <a href="mentors.html" class="link">Mentors</a>
+                <a href="#" class="link">Ask Doubts</a>
+                <a href="contact.html" class="link">Contact</a>
             </div>
             <div class="box">
                 <h3>useful links</h3>
                 <a href="contact.html" class="link">help center</a>
-                <a href="DoubtsPage.html" class="link">ask questions</a>
+                <a href="#" class="link">ask questions</a>
                 <a href="contact.html" class="link">send feedback</a>
                 <a href="#" class="link">private policy</a>
                 <a href="#" class="link">terms of use</a>
