--- a/New folder (2)/XI_homepage_Arts.html
+++ b/New folder (2)/XI_homepage_Arts.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
-  <link rel="stylesheet" href="assets/css/style_XII_home.css">
-  <title>XII Commerce Study Material</title>
+  <link rel="stylesheet" href="assets/css/style_XI_home.css">
+  <title>XI Arts Study Material</title>
 </head>
 
 <body>
@@ -16,10 +16,10 @@
     <a href="index.html" class="logo"> <i class="fas fa-lightbulb"></i> StudentEduTour </a>
     <nav class="navbar">
         <div id="close-navbar" class="fas fa-times"></div>
-        <a href="XII_homepage_Comm.html">Home</a>
-        <a href="#">About Us</a>
-        <a href="DoubtsPage.html">Ask Doubt</a>
-        <a href="#footer_0">Contact Us</a>
+        <a href="XII_homepage_Arts.html">Home</a>
+        <a href="mentors.html">About Us</a>
+        <a href="#">Ask Doubt</a>
+        <a href="contact.html">Contact Us</a>
     </nav>
     <div class="icons">
         <div id="account-btn" class="fas fa-user"></div>
@@ -55,8 +55,8 @@
 <!-- account form section ends -->
 
 <!-- header section ends -->
-<section class="heading-link" id="heading-link-XII-Commerce">
-    <h3>XII Commerce</h3>
+<section class="heading-link" id="heading-link-XI-Arts">
+    <h3>XI Arts</h3>
 </section>
 
 <section class="courses">
