--- a/New folder (2)/XI_homepage_Sci.html
+++ b/New folder (2)/XI_homepage_Sci.html
@@ -143,25 +143,25 @@
             <h3> <i class="fas fa-lightbulb"></i> StudentEduTour </h3>
             <p>Check out our Social Media Handles.</p>
             <div class="share">
-                <a href="#" class="fab fa-facebook-f"></a>
-                <a href="#" class="fab fa-twitter"></a>
-                <a href="#" class="fab fa-instagram"></a>
-                <a href="#" class="fab fa-linkedin"></a>
+                <a href="https://www.facebook.com/aditya.singhal.3133" class="fab fa-facebook-f"></a>
+                <a href="https://twitter.com/singhaladitya12?t=jFKAQgezQVg2DENSb1ZVhg&s=09" class="fab fa-twitter"></a>
+                <a href="https://instagram.com/rohitrana__17?igshid=YmMyMTA2M2Y=" class="fab fa-instagram"></a>
+                <a href="https://www.linkedin.com/in/rohitrana24" class="fab fa-linkedin"></a>
             </div>
         </div>
         <div class="box">
             <h3>quick links</h3>
-            <a href="home.html" class="link">home</a>
-            <a href="about.html" class="link">about</a>
-            <a href="courses.html" class="link">courses</a>
-            <a href="contact.html" class="link">contact</a>
+            <a href="index.html" class="link">Home</a>
+            <a href="mentors.html" class="link">Mentors</a>
+            <a href="#" class="link">Ask Doubts</a>
+            <a href="contact.html" class="link">Contact</a>
         </div>
         <div class="box">
             <h3>useful links</h3>
-            <a href="#" class="link">help center</a>
+            <a href="contact.html" class="link">help center</a>
             <a href="#" class="link">ask questions</a>
-            <a href="#" class="link">send feedback</a>
-            <a href="#" class="link">privacy policy</a>
+            <a href="contact.html" class="link">send feedback</a>
+            <a href="#" class="link">private policy</a>
             <a href="#" class="link">terms of use</a>
         </div>
         <div class="box">
