Minor changes and arts home-pages done
added 11th and 12th arts home pages and some minor changes made in most of the files to improve connectivity between webpages

--- a/New folder (2)/XII_homepage_Comm.html
+++ b/New folder (2)/XII_homepage_Comm.html
@@ -16,10 +16,10 @@
     <a href="index.html" class="logo"> <i class="fas fa-lightbulb"></i> StudentEduTour </a>
     <nav class="navbar">
         <div id="close-navbar" class="fas fa-times"></div>
-        <a href="XII_homepage_Comm.html">Home</a>
-        <a href="#">About Us</a>
-        <a href="DoubtsPage.html">Ask Doubt</a>
-        <a href="#footer_0">Contact Us</a>
+        <a href="index.html">Home</a>
+        <a href="mentors.html">Mentors</a>
+        <a href="#">Ask Doubt</a>
+        <a href="contact.html">Contact Us</a>
     </nav>
     <div class="icons">
         <div id="account-btn" class="fas fa-user"></div>
