--- a/New folder (2)/XI_homepage_Arts.html
+++ b/New folder (2)/XI_homepage_Arts.html
@@ -16,8 +16,8 @@
     <a href="index.html" class="logo"> <i class="fas fa-lightbulb"></i> StudentEduTour </a>
     <nav class="navbar">
         <div id="close-navbar" class="fas fa-times"></div>
-        <a href="XII_homepage_Arts.html">Home</a>
-        <a href="mentors.html">About Us</a>
+        <a href="index.html">Home</a>
+        <a href="mentors.html">Mentors</a>
         <a href="#">Ask Doubt</a>
         <a href="contact.html">Contact Us</a>
     </nav>
@@ -61,38 +61,11 @@
 
 <section class="courses">
     <div class="box-container">
-        <div class="box">
-            <div class="image">
-                <img src="assets/imgs/Accountancy_Course_bg.png" alt="">
-                <h3>Accountancy</h3>
-            </div>
-            <div class="content">
-                <h3>LIFE IS LIKE ACCOUNTANCY, EVERYTHING MUST BE BALANCED.</h3>
-                <a href="#" class="btn">read more</a>
-                <div class="icons">
-                    <span> <i class="fas fa-book"></i> 12 modules </span>
-                    <span> <i class="fas fa-clock"></i> 6 hours </span>
-                </div>
-            </div>
-        </div>
-        <div class="box">
-            <div class="image">
-                <img src="assets/imgs/Business Studies course bg.png" alt="">
-                <h3>Business Studies</h3>
-            </div>
-            <div class="content">
-                <h3>It is a field of study that deals with the principles of business, management, and economics</h3>
-                <a href="#" class="btn">read more</a>
-                <div class="icons">
-                    <span> <i class="fas fa-book"></i> 12 modules </span>
-                    <span> <i class="fas fa-clock"></i> 6 hours </span>
-                </div>
-            </div>
-        </div>
+        
         <div class="box">
             <div class="image">
                 <img src="assets/imgs/ECONOMICS.jpeg" alt="">
-                <h3>Economics</h3>
+                <h3>ECONOMICS</h3>
             </div>
             <div class="content">
                 <h3>The hardest thing in the world to understand is the income tax.</h3>
@@ -105,11 +78,11 @@
         </div>
         <div class="box">
             <div class="image">
-                <img src="assets/imgs/MATHS.jpeg" alt="">
-                <h3>MATHEMATICS</h3>
+                <img src="assets/imgs/Computer_Science_course_bg.jpg" alt="">
+                <h3>COMPUTER SCIENCE</h3>
             </div>
             <div class="content">
-                <h3>PURE MATHEMATICS IS, IN ITS WAY, THE POETRY OF LOGICAL IDEAS</h3>
+                <h3>Computer Science is no more about computers than astronomy is about telescopes.</h3>
                 <a href="#" class="btn">read more</a>
                 <div class="icons">
                     <span> <i class="fas fa-book"></i> 12 modules </span>
@@ -128,6 +101,76 @@
                 <div class="icons">
                     <span> <i class="fas fa-book"></i> 12 modules </span>
                     <span> <i class="fas fa-clock"></i> 6 hours </span>
+                </div>
+            </div>
+        </div>
+        <div class="box">
+            <div class="image">
+                <img src="assets/imgs/GEOGRAPGY.jpeg" alt="">
+                <h3>GEOGRAPHY</h3>
+            </div>
+            <div class="content">
+                <h3>Geography is none less than a magician.</h3>
+                <a href="#" class="btn">read more</a>
+                <div class="icons">
+                    <span> <i class="fas fa-book"></i> 12 modules </span>
+                    <span> <i class="fas fa-clock"></i> 6 hours </span>
+                </div>
+            </div>
+        </div>
+        <div class="box">
+            <div class="image">
+                <img src="assets/imgs/HISTORY.jpeg" alt="">
+                <h3>HISTORY</h3>
+            </div>
+            <div class="content">
+                <h3>History is a set of lies agreed upon</h3>
+                <a href="#" class="btn">read more</a>
+                <div class="icons">
+                    <span> <i class="fas fa-book"></i> 12 modules </span>
+                    <span> <i class="fas fa-clock"></i> 6 hours </span>
+                </div>
+            </div>
+        </div>
+        <div class="box">
+            <div class="image">
+                <img src="assets/imgs/POLITICS.jpeg" alt="">
+                <h3>POLITICS</h3>
+            </div>
+            <div class="content">
+                <h3>ACHE DINN...AANE VAALE HAI!!! WAAH MODI JI WAAH !!</h3>
+                <a href="#" class="btn">read more</a>
+                <div class="icons">
+                    <span> <i class="fas fa-book"></i> 12 modules </span>
+                    <span> <i class="fas fa-clock"></i> 6 hours </span>
+                </div>
+            </div>
+        </div>
+        <div class="box">
+            <div class="image">
+                <img src="assets/imgs/Sociology course bg.jpg" alt="">
+                <h3>SOCIOLOGY</h3>
+            </div>
+            <div class="content">
+                <h3>In science, when human behavior enters the equation, things go non-linear. That's why physics is easy and sociology is hard.</h3>
+                <a href="#" class="btn">read more</a>
+                <div class="icons">
+                    <span> <i class="fas fa-book"></i> 12 modules </span>
+                    <span> <i class="fas fa-clock"></i> 6 hours </span>
+                </div>
+            </div>
+        </div>
+        <div class="box">
+            <div class="image">
+                <img src="assets/imgs/Philosophy_course_bg.jpg" alt="PHILOSOPHY_IMG">
+                <h3>PHILOSOPHY</h3>
+            </div>
+            <div class="content">
+                <h3>It is the study of ideas and beliefs about the meaning of life.</h3>
+                <a href="#" class="btn">read more</a>
+                <div class="icons">
+                    <span><i class="fas fa-book"></i>12 modules</span>
+                    <span><i class="fas fa-clock"></i>6 hours</span>
                 </div>
             </div>
         </div>
