--- a/New folder (2)/mentors.html
+++ b/New folder (2)/mentors.html
@@ -20,7 +20,7 @@
             <div id="close-navbar" class="fas fa-times"></div>
             <a href="index.html">home</a>
             <a href="mentors.html">mentors</a>
-            <a href="DoubtsPage.html">Ask doubt</a>
+            <a href="#">Ask doubt</a>
             <a href="contact.html">contact</a>
         </nav>
         <div class="icons">
@@ -181,7 +181,7 @@
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim animi atque numquam harum libero
                         nemo, eligendi laboriosam beatae quo iure corrupti, neque rerum possimus non nisi quia! Cumque,
                         tempora sit.</p>
-                    <img src="assets/imgs/pic-3.png" alt="">
+                    <img src="assets/imgs/pic-1.png" alt="">
                     <h3>Rohit Rana</h3>
                     <div class="stars">
                         <i class="fas fa-star"></i>
