--- a/New folder (2)/XII_homepage_Arts.html
+++ b/New folder (2)/XII_homepage_Arts.html
@@ -16,9 +16,9 @@
     <a href="index.html" class="logo"> <i class="fas fa-lightbulb"></i> StudentEduTour </a>
     <nav class="navbar">
         <div id="close-navbar" class="fas fa-times"></div>
-        <a href="XII_homepage_Arts.html">Home</a>
-        <a href="mentors.html">About Us</a>
-        <a href="DoubtsPage.html">Ask Doubt</a>
+        <a href="index.html">Home</a>
+        <a href="mentors.html">Mentors</a>
+        <a href="#">Ask Doubt</a>
         <a href="contact.html">Contact Us</a>
     </nav>
     <div class="icons">
