--- a/New folder (2)/index.html
+++ b/New folder (2)/index.html
@@ -20,7 +20,7 @@
             <div id="close-navbar" class="fas fa-times"></div>
             <a href="index.html">home</a>
             <a href="mentors.html">Mentors</a>
-            <a href="DoubtsPage.html">courses</a>
+            <a href="#Study_Materials">courses</a>
             <a href="contact.html">contact</a>
         </nav>
         <div class="icons">
@@ -69,7 +69,7 @@
                 </section>
                 <section class="swiper-slide slide" style="background: url(assets/imgs/home-slide-2.jpg) no-repeat;">
                     <div class="content">
-                        <h3>the best Mentors you will find find here!</h3>
+                        <h3>You wil find the best mentors here!</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas impedit labore dolore unde,
                             quidem corrupti?</p>
                         <a href="mentors.html" class="btn">get started</a>
@@ -90,7 +90,7 @@
     <!-- home section ends -->
     <!-- subjects section starts  -->
     <section class="subjects">
-        <h1 class="heading">our popular subjects</h1>
+        <h1 class="heading">popular subjects</h1>
         <div class="box-container">
             <div class="box">
                 <img src="assets/imgs/physics-icon.png" alt="">
@@ -126,8 +126,8 @@
     </section>
     <!-- subjects section ends -->
     <!-- home courses slider section starts  -->
-    <section class="home-courses">
-        <h1 class="heading"> our popular study material </h1>
+    <section class="home-courses" id="Study_Materials">
+        <h1 class="heading"> our study materials </h1>
         <div class=" home-courses-slider">
             <div class="swiper-wrapper">
                 <div class=" slide">
@@ -152,7 +152,7 @@
                         <a href="class10.html" class="btn">read more</a>
                     </div>
                 </div>
-                <div class=" slide">
+                <div class=" slide high_sec">
                     <div class="image">
                         <img src="assets/imgs/class11-icon.jpeg" alt="">
                         <h3>class 11th</h3>
@@ -160,10 +160,12 @@
                     <div class="content">
                         <h3>class 11th</h3>
                         <p></p>
-                        <a href="XI_homepage_Sci.html" class="btn">read more</a>
+                        <a href="XI_homepage_Sci.html" class="btn">Science</a>
+                        <a href="XI_homepage_Comm.html" class="btn">Commerce</a>
+                        <a href="XI_homepage_Arts.html" class="btn">Arts</a>
                     </div>
                 </div>
-                <div class=" slide">
+                <div class=" slide high_sec">
                     <div class="image">
                         <img src="assets/imgs/class12-icon.jpeg" alt="">
                         <h3>class 12th</h3>
@@ -171,7 +173,9 @@
                     <div class="content">
                         <h3>class 12th</h3>
                         <p></p>
-                        <a href="XII_homepage_Sci.html" class="btn">read more</a>
+                        <a href="XII_homepage_Sci.html" class="btn">Science</a>
+                        <a href="XII_homepage_Comm.html" class="btn">Commerce</a>
+                        <a href="XII_homepage_Arts.html" class="btn">Arts</a>
                     </div>
                 </div>
             </div>
@@ -183,7 +187,7 @@
         <div class="box-container">
             <div class="box">
                 <h3> <i class="fas fa-lightbulb"></i> StudentEduTour </h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, voluptatem.</p>
+                <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, voluptatem.</p> -->
                 <div class="share">
                     <a href="https://www.facebook.com/aditya.singhal.3133" class="fab fa-facebook-f"></a>
                     <a href="https://twitter.com/singhaladitya12?t=jFKAQgezQVg2DENSb1ZVhg&s=09"
