--- a/New folder (2)/class10.html
+++ b/New folder (2)/class10.html
@@ -20,6 +20,7 @@
             <div id="close-navbar" class="fas fa-times"></div>
             <a href="index.html">home</a>
             <a href="mentors.html">Mentors</a>
+            <a href="news.html">News/blogs</a>
             <a href="DoubtsPage.html">courses</a>
             <a href="contact.html">contact</a>
         </nav>
