--- a/New folder (2)/contact.html
+++ b/New folder (2)/contact.html
@@ -23,6 +23,7 @@
             <div id="close-navbar" class="fas fa-times"></div>
             <a href="index.html">home</a>
             <a href="mentors.html">mentors</a>
+            <a href="news.html">News/blogs</a>
             <a href="DoubtsPage.html">Ask doubt</a>
             <a href="contact.html">contact</a>
         </nav>
