--- a/New folder (2)/career.html
+++ b/New folder (2)/career.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>career</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="assets/css/style_XII_home.css">
-    <title>XII Arts Study Material</title>
+    <link rel="stylesheet" href="assets/css/career.css">
 </head>
 
 <body>
     <!-- header section starts  -->
     <header class="header">
-        <a href="index.html" class="logo"> <i class="fas fa-lightbulb"></i> StudentEduTour </a>
+        <a href="index.html" class=""> <img src="assets/imgs/logo.png" alt="" width="50px "> </a>
+        <a href="index.html" class="logo">StudentEduTour</a>
         <nav class="navbar">
             <div id="close-navbar" class="fas fa-times"></div>
-            <a href="index.html">Home</a>
+            <a href="index.html">home</a>
             <a href="mentors.html">Mentors</a>
             <a href="news.html">News/blogs</a>
-            <a href="#">Ask Doubt</a>
-            <a href="contact.html">Contact Us</a>
+            <a href="DoubtsPage.htm">courses</a>
+            <a href="contact.html">contact</a>
         </nav>
         <div class="icons">
             <div id="account-btn" class="fas fa-user"></div>
@@ -56,89 +57,89 @@
     </div>
     <!-- account form section ends -->
     <!-- header section ends -->
-    <section class="heading-link" id="heading-link-XII-Arts">
-        <h3>XII Arts</h3>
+    <!-- header section ends -->
+    <section class="heading-link">
+        <h3>career</h3>
+        <p> <a href="home.html">home</a> / career </p>
     </section>
-    <section class="courses">
-        <div class="box-container">
-            <div class="box">
-                <div class="image">
-                    <img src="assets/imgs/Accountancy_Course_bg.png" alt="">
-                    <h3>Accountancy</h3>
+    <!-- about section starts  -->
+    <section class="about">
+        <div class="image">
+            <img src="assets/imgs/career.png" alt="">
+        </div>
+        <div class="content">
+            <h3 class="about-title">Unlock Your Potential: Discover Exciting Career Opportunities After 12th</h3>
+            <p>After completing 12th grade, students face a crucial decision of choosing the right career path. With
+                numerous options available, it can be overwhelming to pick just one. However, with proper research and
+                guidance, students can make an informed decision and set themselves on a successful career path.</p>
+            <div class="icons-container">
+                <div class="icons">
+                    <img src="images/about-icon-1.png" alt="">
+                    <h3>20+</h3>
+                    <span>mentors</span>
                 </div>
-                <div class="content">
-                    <h3>LIFE IS LIKE ACCOUNTANCY, EVERYTHING MUST BE BALANCED.</h3>
-                    <a href="#" class="btn">read more</a>
-                    <div class="icons">
-                        <span> <i class="fas fa-book"></i> 12 modules </span>
-                        <span> <i class="fas fa-clock"></i> 6 hours </span>
-                    </div>
+                <div class="icons">
+                    <img src="images/about-icon-2.png" alt="">
+                    <h3>1200+</h3>
+                    <span>students</span>
                 </div>
-            </div>
-            <div class="box">
-                <div class="image">
-                    <img src="assets/imgs/Business Studies course bg.png" alt="">
-                    <h3>Business Studies</h3>
-                </div>
-                <div class="content">
-                    <h3>It is a field of study that deals with the principles of business, management, and economics
-                    </h3>
-                    <a href="#" class="btn">read more</a>
-                    <div class="icons">
-                        <span> <i class="fas fa-book"></i> 12 modules </span>
-                        <span> <i class="fas fa-clock"></i> 6 hours </span>
-                    </div>
+                <div class="icons">
+                    <img src="images/about-icon-3.png" alt="">
+                    <h3>100+</h3>
+                    <span>awards</span>
                 </div>
             </div>
-            <div class="box">
-                <div class="image">
-                    <img src="assets/imgs/ECONOMICS.jpeg" alt="">
-                    <h3>Economics</h3>
-                </div>
-                <div class="content">
-                    <h3>The hardest thing in the world to understand is the income tax.</h3>
-                    <a href="#" class="btn">read more</a>
-                    <div class="icons">
-                        <span> <i class="fas fa-book"></i> 12 modules </span>
-                        <span> <i class="fas fa-clock"></i> 6 hours </span>
-                    </div>
-                </div>
-            </div>
-            <div class="box">
-                <div class="image">
-                    <img src="assets/imgs/MATHS.jpeg" alt="">
-                    <h3>MATHEMATICS</h3>
-                </div>
-                <div class="content">
-                    <h3>PURE MATHEMATICS IS, IN ITS WAY, THE POETRY OF LOGICAL IDEAS</h3>
-                    <a href="#" class="btn">read more</a>
-                    <div class="icons">
-                        <span> <i class="fas fa-book"></i> 12 modules </span>
-                        <span> <i class="fas fa-clock"></i> 6 hours </span>
-                    </div>
-                </div>
-            </div>
-            <div class="box">
-                <div class="image">
-                    <img src="assets/imgs/ENGLISH.jpeg" alt="">
-                    <h3>ENGLISH</h3>
-                </div>
-                <div class="content">
-                    <h3>To inspire, get the English language.</h3>
-                    <a href="#" class="btn">read more</a>
-                    <div class="icons">
-                        <span> <i class="fas fa-book"></i> 12 modules </span>
-                        <span> <i class="fas fa-clock"></i> 6 hours </span>
-                    </div>
-                </div>
-            </div>
+        </div>
     </section>
+    <!-- about section ends -->
+    <!-- mentors section starts  -->
+    <section class="teachers">
+        <h1 class="heading">Select Your Stream</h1>
+        <div class="swiper teachers-slider">
+            <div class="swiper-wrapper">
+                <div class=" slide">
+                    <div class="image">
+                        <img src="assets/imgs/science.png" alt="" width="373.4px" height="373.5">
+                        <div class="share">
+                            <a href="class9.html" class="btn">click here</a>
+                        </div>
+                    </div>
+                    <div class="content">
+                        <h3>Science</h3>
+                    </div>
+                </div>
+                <div class="s slide">
+                    <div class="image">
+                        <img src="assets/imgs/commerce.png" alt="" width="373.4px" height="373.5">
+                        <div class="share">
+                            <a href="class9.html" class="btn">click here</a>
+                        </div>
+                    </div>
+                    <div class="content">
+                        <h3>Commerce</h3>
+                    </div>
+                </div>
+                <div class=" slide">
+                    <div class="image">
+                        <img src="assets/imgs/humanities.png" alt="" width="373.4px" height="373.5">
+                        <div class="share">
+                            <a href="class9.html" class="btn">click here</a>
+                        </div>
+                    </div>
+                    <div class="content">
+                        <h3>Humanities</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- menntors section ends -->
     <!-- footer section starts  -->
-    <section class="footer" id="footer_0">
+    <section class="footer">
         <div class="box-container">
             <div class="box">
                 <h3> <i class="fas fa-lightbulb"></i> StudentEduTour </h3>
-                <p>Check out our Social Media Handles.</p>
+                <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, voluptatem.</p> -->
                 <div class="share">
                     <a href="https://www.facebook.com/aditya.singhal.3133" class="fab fa-facebook-f"></a>
                     <a href="https://twitter.com/singhaladitya12?t=jFKAQgezQVg2DENSb1ZVhg&s=09"
@@ -149,15 +150,15 @@
             </div>
             <div class="box">
                 <h3>quick links</h3>
-                <a href="index.html" class="link">Home</a>
-                <a href="mentors.html" class="link">Mentors</a>
-                <a href="#" class="link">Ask Doubts</a>
-                <a href="contact.html" class="link">Contact</a>
+                <a href="index.html" class="link">home</a>
+                <a href="mentors.html" class="link">mentors</a>
+                <a href="DoubtsPage.html" class="link">ASK DOUBTS</a>
+                <a href="contact.html" class="link">contact</a>
             </div>
             <div class="box">
                 <h3>useful links</h3>
                 <a href="contact.html" class="link">help center</a>
-                <a href="#" class="link">ask questions</a>
+                <a href="DoubtsPage.html" class="link">ask questions</a>
                 <a href="contact.html" class="link">send feedback</a>
                 <a href="#" class="link">private policy</a>
                 <a href="#" class="link">terms of use</a>
@@ -171,7 +172,7 @@
                 </form>
             </div>
         </div>
-        <div class="credit"> created by <span>StudentEduTour</span> | all rights reserved! </div>
+        <div class="credit"> created by <span> StudentEduTour</span> | all rights reserved! </div>
     </section>
     <!-- footer section ends -->
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
