--- a/New folder (2)/mentors.html
+++ b/New folder (2)/mentors.html
@@ -20,6 +20,7 @@
             <div id="close-navbar" class="fas fa-times"></div>
             <a href="index.html">home</a>
             <a href="mentors.html">mentors</a>
+            <a href="news.html">News/blogs</a>
             <a href="#">Ask doubt</a>
             <a href="contact.html">contact</a>
         </nav>
