--- a/New folder (2)/index.html
+++ b/New folder (2)/index.html
@@ -47,11 +47,11 @@
             </div>
             <input type="submit" value="login now" class="btn">
         </form>
-        <form class="register-form" action="">
+        <form class="register-form" action="http://localhost/" method="post">
             <h3>register now</h3>
-            <input type="email" placeholder="enter your email" class="box">
-            <input type="password" placeholder="enter your password" class="box">
-            <input type="password" placeholder="confirm your password" class="box">
+            <input type="email" placeholder="enter your email" class="box" name="email">
+            <input type="password" placeholder="enter your password" class="box" name="password">
+            <input type="password" placeholder="confirm your password" class="box" name="cpassword">
             <input type="submit" value="register now" class="btn">
         </form>
     </div>
