--- a/New folder (2)/mentors.html
+++ b/New folder (2)/mentors.html
@@ -21,7 +21,7 @@
             <a href="index.html">home</a>
             <a href="mentors.html">mentors</a>
             <a href="news.html">News/blogs</a>
-            <a href="#">Ask doubt</a>
+            <a href="career.html">Career</a>
             <a href="contact.html">contact</a>
         </nav>
         <div class="icons">
