--- a/New folder (2)/news.html
+++ b/New folder (2)/news.html
@@ -23,7 +23,7 @@
             <a href="index.html">home</a>
             <a href="mentors.html">Mentors</a>
             <a href="news.html">News/blogs</a>
-            <a href="DoubtsPage.htm">courses</a>
+            <a href="career.html">Career</a>
             <a href="contact.html">contact</a>
         </nav>
         <div class="icons">
