--- a/New folder (2)/XII_homepage_Sci.html
+++ b/New folder (2)/XII_homepage_Sci.html
@@ -14,13 +14,14 @@
 <body>
     <!-- header section starts  -->
     <header class="header">
-        <a href="index.html" class="logo"> <i class="fas fa-lightbulb"></i> StudentEduTour </a>
+        <a href="index.html" class=""> <img src="assets/imgs/logo.png" alt="" width="50px "> </a>
+        <a href="index.html" class="logo">StudentEduTour</a>
         <nav class="navbar">
             <div id="close-navbar" class="fas fa-times"></div>
             <a href="index.html">Home</a>
             <a href="mentors.html">Mentors</a>
             <a href="news.html">News/blogs</a>
-            <a href="#">Ask Doubt</a>
+            <a href="career.html">Career</a>
             <a href="contact.html">Contact Us</a>
         </nav>
         <div class="icons">
