--- a/New folder (2)/class10.html
+++ b/New folder (2)/class10.html
@@ -21,7 +21,7 @@
             <a href="index.html">home</a>
             <a href="mentors.html">Mentors</a>
             <a href="news.html">News/blogs</a>
-            <a href="DoubtsPage.html">courses</a>
+            <a href="career.html">Career</a>
             <a href="contact.html">contact</a>
         </nav>
         <div class="icons">
