--- a/New folder (2)/contact.html
+++ b/New folder (2)/contact.html
@@ -24,7 +24,7 @@
             <a href="index.html">home</a>
             <a href="mentors.html">mentors</a>
             <a href="news.html">News/blogs</a>
-            <a href="DoubtsPage.html">Ask doubt</a>
+            <a href="career.html">Career</a>
             <a href="contact.html">contact</a>
         </nav>
         <div class="icons">
